# morgex

./: CMakeLists.txt  config.h.in
src/: .main.c.swp  CMakeLists.txt  main.c
src/utils/: CMakeLists.txt  utils.c  utils.h
